# aoc2024

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
src/: aoc.cpp  aoc_header_libs.cpp  day.hpp  day_1.cpp  day_1.hpp  day_10.cpp  day_10.hpp  day_11.cpp  day_11.hpp  day_12.cpp  day_12.hpp  day_13.cpp  day_13.hpp  day_14.cpp  day_14.hpp  day_15.cpp  day_15.hpp  day_16.cpp  day_16.hpp  day_17.cpp  day_17.hpp  day_18.cpp  day_18.hpp  day_19.cpp  day_19.hpp  day_2.cpp  day_2.hpp  day_20.cpp  day_20.hpp  day_21.cpp  day_21.hpp  day_22.cpp  day_22.hpp  day_23.cpp  day_23.hpp  day_24.cpp  day_24.hpp  day_25.cpp  day_25.hpp  day_3.cpp  (+13 more)
